@@ -1,3 +1,7 @@
+2008-11-24  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* server.c (handle_v_run): Always use the supplied argument list.
+
 2008-11-19  Bob Wilson  <bob.wilson@acm.org>
 	
 	* xtensa-xtregs.c (XTENSA_ELF_XTREG_SIZE): Change to 4.
